# backtest_SmallCaps

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
00_cto/: data_resume.md  polygon_official_data_treatment_constancia.md
backtest/: pyvenv.cfg
backtest/Scripts/: activate  activate.bat  jp.py
data/manifests/: r2_slice_AABA_2019_01.json  r2_slice_AABA_2019_01.jsonl  r2_slice_AABA_2019_01_counts.json
data/reference/: README_official_lifecycle.md  market_calendar_official_2005.csv  market_calendar_official_2006.csv  market_calendar_official_2007.csv  market_calendar_official_2008.csv  market_calendar_official_2009.csv  market_calendar_official_2010.csv  market_calendar_official_2011.csv  market_calendar_official_2012.csv  market_calendar_official_2013.csv  market_calendar_official_2014.csv  market_calendar_official_2015.csv  market_calendar_official_2016.csv  market_calendar_official_2017.csv  market_calendar_official_2018.csv  market_calendar_official_2019.csv  (+22 more)
notebooks/: 00_Cobertura_por_ticker.ipynb  README.md  codex.md
scripts/: agent05_build_market_calendar_official.py  agent_universe_audit.py  build_manifest.py  build_official_lifecycle.py  build_universe_pti.py  download_official_events_sec.py  download_quotes.md  download_quotes.py  download_quotes_from_ticker_list.py  r2_sync.py  reconcile_official_events_multisource.py  run_03_massive_v2_detached.py  run_03_massive_v2_prefilter.py  run_audit_ohlcv_1m_hours.ps1  run_cell_03_v2_massive.py  run_cell_06_v2_massive.py  run_min_03_for_01.py  validate_data.py
(+304 files in other folders)
