[project]
name = "trading-backtester"
version = "0.1.0"
description = "Reproducible quant-grade backtesting framework with data integrity gates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "botocore>=1.34.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyarrow>=16.0.0",
  "polars>=1.3.0",
  "duckdb>=1.0.0",
  "pandas>=2.2.0",
  "numpy>=2.0.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-xdist>=3.6.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pre-commit>=3.7.0",
  "jupyterlab>=4.2.0",
  "nbstripout>=0.7.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
